// Copyright (C) 2025 Brian Curnow
// 
// This file is part of zonemgr.
// 
// zonemgr is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// zonemgr is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
// 
// You should have received a copy of the GNU General Public License
// along with zonemgr.  If not, see <https://www.gnu.org/licenses/>.
syntax = "proto3";
option go_package = "./plugins/proto";

// Define the various schema objects
message Config {
  optional bool generate_serial = 1;
  optional uint32 serial_change_index = 2;
  optional bool generate_reverse_lookup_zones = 3;
  string plugins_directory = 4;
  string serial_change_index_directory = 5;
}

message ResourceRecordValue {
  string value = 1;
  string comment = 2;
}

message ResourceRecord {
  string name = 1;
  string type = 2;
  string class = 3;
  int32  ttl = 4;
  repeated ResourceRecordValue values = 5;
  string value = 6;
  string comment = 7;
}

message TTL {
  //Todo fix this!
  int32 ttl = 1;
  string comment = 2;
}

message Zone {
  Config config = 1;
  map<string, ResourceRecord> resource_records = 2;
  TTL ttl = 3;
}

message Empty {}

message PluginVersionResponse {
  string version = 1;
}

message PluginTypesResponse {
  repeated string supportedTypes = 1;
}

message ConfigureRequest {
  Config config = 1;
}

message NormalizeRequest {
  string identifier = 1;
  ResourceRecord resource_record = 2;
}

message NormalizeResponse {
  ResourceRecord resource_record = 1;
}

message ValidateZoneRequest {
  string name = 1;
  Zone zone = 2;
}

message RenderRequest {
  string identifier = 1;
  ResourceRecord resource_record = 2;
}

message RenderResonse {
  string content = 1;
}

service ZonemgrPlugin {
  rpc PluginVersion(Empty) returns (PluginVersionResponse);
  rpc PluginTypes(Empty) returns (PluginTypesResponse);
  rpc Configure(ConfigureRequest) returns (Empty);
  rpc Normalize(NormalizeRequest) returns (NormalizeResponse);
  rpc ValidateZone(ValidateZoneRequest) returns (Empty);
  rpc Render(RenderRequest) returns (RenderResonse);
}